# neural

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: crossover.rs  errors.rs  lib.rs  selection.rs
